--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@prisma/config": "^7.2.0",
     "@types/node": "^22",
     "@types/pg": "^8.16.0",
     "@types/react": "^19.2.3",
