--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
+    "seed": "prisma db seed",
     "postinstall": "prisma generate"
   },
   "dependencies": {
